--- a/_trails/tri-county-triangle-trail.html
+++ b/_trails/tri-county-triangle-trail.html
@@ -2,6 +2,7 @@
 title: Tri-County Triangle Trail
 subtitle: A gentle ride from Washington Court House to Chillicothe.
 center: "[39.4366,-83.2083]"
+type: bikeway
 zoom: 12
 area: Washington Court House to Chillicothe
 cities:
