--- a/_trails/tri-county-triangle-trail.html
+++ b/_trails/tri-county-triangle-trail.html
@@ -1,4 +1,5 @@
 ---
+layout: trails
 title: Tri-County Triangle Trail
 subtitle: A gentle ride from Washington Court House to Chillicothe.
 center: "[39.4366,-83.2083]"
