--- a/_trails/tri-county-triangle-trail.html
+++ b/_trails/tri-county-triangle-trail.html
@@ -2,6 +2,7 @@
 layout: trails
 title: Tri-County Triangle Trail
 subtitle: A gentle ride from Washington Court House to Chillicothe.
+img: tri-county-triangle-trail-01.jpg
 center: "[39.4366,-83.2083]"
 type: bikeway
 zoom: 12
@@ -12,9 +13,8 @@ cities:
 counties:
    - Ross
    - Fayette
-distance: 33
+length: 33
 surface: Asphalt and Crushed Stone
-img: header.jpg
 map:
 layers:
   trails:
