--- a/_trails/gallia-hike-bike-trail.html
+++ b/_trails/gallia-hike-bike-trail.html
@@ -4,4 +4,12 @@ title: Gallia County Hike & Bike Trail
 subtitle: A great trail.
 length: 10
 type: bikeway
+img: tri-county-triangle-trail-01.jpg
+area: Gallipolis
+cities:
+  - Gallipolis
+counties:
+   - Gallia
+length: 33
+surface: Asphalt and Crushed Stone
 ---
