--- a/_trails/gallia-hike-bike-trail.html
+++ b/_trails/gallia-hike-bike-trail.html
@@ -1,6 +1,6 @@
 ---
 layout: trails
-title: Gallia County Hike & Bike Trail
+title: Gallia County Hike and Bike Trail
 subtitle: A great trail.
 length: 10
 type: bikeway
