--- a/_trails/adena-heritage-trail.html
+++ b/_trails/adena-heritage-trail.html
@@ -26,11 +26,13 @@ pois:
   - name: parkingRobinsonRd
     icon: parking #any mapkey icon - http://mapkeyicons.com/
     latlng: "[39.52395, -83.38547]"
-    title:  Parking
+    Title:  Parking
     description: Robinson Rd SE Parking Area
+    marker-symbol: parking
   - name: parkingChilli
     icon: parking
     latlng: "[39.34928,-82.99633]"
-    title:  Parking
+    Title:  Parking
     description: Chillicothe SR 104 Parking Area
+    marker-symbol: parking
 ---
