--- a/_pages/about.html
+++ b/_pages/about.html
@@ -7,9 +7,7 @@ permalink: /about/
   <div id="content" class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-      <p>The Southern Ohio Trails site exists to promote Active Transportation and outdoor exploration in Southern Ohio. It is funded in part by the Ohio Department or Transportation, the Appalachian Regional Commission, the Economic Development Services Agency and OVRDC members.
-
-      The code to this site is public domain, unless otherwise noted, and can be found on GitHub. The site is powered by Jekyll, and uses two Jekyll plugins not available in the default GitHub/Jekyll generator.</p>
+      <p>{{site.about}}</p>
       </div>
     </div>
   </div>
