--- a/_pages/mountain-biking.html
+++ b/_pages/mountain-biking.html
@@ -1,6 +1,23 @@
 ---
 title: Mountain Bike Trails
-type: mountain-biking
 permalink: /mountain-biking/
 ---
-Coming Soon...
+<section class="container">
+  <div class="row">
+    <div class="col-lg-12 text-center">
+      <h2 id="content" class="section-heading">Explore the Trails</h2>
+    </div>
+    <div class="col-lg-8 col-lg-offset-2 text-center">
+      <h3>The rugged hills of southern Ohio make the area an ideal location for mountain biking. Many of these trails have been collected by the Mountain Bike Trails Project (MTB). The MTB Project also lets you add your own rides. Visit their site to learn more.
+      <br /><br />
+      <a href="https://www.mtbproject.com/" target="_blank" class="btn btn-outline btn-sm-nav" style="font-size:16px;"><i class="fa fa-external-link" aria-hidden="true"></i> MTB Project</a></h3>
+    </div>
+    <div class="col-lg-12 text-center">
+      <hr class="primary">
+      <br />
+    </div>
+    <div class="col-lg-10 col-lg-offset-1 text-center">
+      <iframe style="width:100%; max-width:1200px; height:700px;" frameborder="0" scrolling="no" src="https://www.mtbproject.com/widget/map?favs=1&location=fixed&x=-9235740&y=4733490&z=4&h=700"></iframe>
+    </div>
+  </div>
+</section>
