--- a/_pages/hiking.html
+++ b/_pages/hiking.html
@@ -3,5 +3,7 @@ title: Hiking & Backpacking Trails
 type: hiking
 index: hiking
 permalink: /hiking/
+description: >-
+ Southern Ohio has hundres of miles of hiking and backpacking trails. The trails featured here represent the best of what our region has to offer for the hiking outdoor enthusiast. Many of these trails are part of a larger trail system and each trail has links to their repsective parks on the indiviudal trail page.
 ---
 {%include 4-trails-list.html%}
