--- a/_pages/resources.html
+++ b/_pages/resources.html
@@ -3,17 +3,19 @@ title: Hiking & Cycling Resources
 subtitle: Sites and apps to help you explore Ohio and get you out on the trail!
 permalink: /resources/
 ---
-<section class="animated">
-  <div id="content" class="container">
-    <div class="row">
-      {% for link in site.links %}
-      <div class="col-lg-6">
-        <a href="{{link.url}}" target="_blank"><h3>{{link.name}}</h3></a>
-        {{link.description}}<br />
-        <a href="{{link.url}}" target="_blank" class="btn btn-outline btn-sm-nav"><i class="fa fa-external-link" aria-hidden="true"></i> Link</a>
+<section class="animated container">
+  <div id="content" class="row row-offcanvas row-offcanvas-right">
+    <div class="col-lg-6 col-lg-offset-3">
+      {% assign sorted_links = site.data.resources | sort:"name" %}
+      {% for resource in sorted_links %}
+      <div>
+        <a href="{{resource.url}}" target="_blank"><h3>{{resource.name}}</h3></a>
+        {{resource.description}}<br />
+        <a href="{{resource.url}}" target="_blank" class="btn btn-outline btn-sm-nav"><i class="fa fa-external-link" aria-hidden="true"></i> Link</a>
         <hr />
       </div>
       {% endfor %}
+      </div>
     </div>
   </div>
 </section>
