--- a/admin/index.html
+++ b/admin/index.html
@@ -12,6 +12,6 @@
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
   <!--script src="https://unpkg.com/netlify-cms@^0.7.0/dist/cms.js"></script-->
-  <script src="/admin/netlifycms.js"></script>
+  <script src="/admin/cms.js"></script>
 </body>
 </html>
