--- a/_pages/news.html
+++ b/_pages/news.html
@@ -38,7 +38,7 @@ css: >-
 {% for post in site.posts limit:2%}
 <div class="col-sm-6 col-md-6 post-list featured">
   <a href="{{post.url}}">
-    <div class="post-list--img" style="background:url(/trails/images/medium-large/{% if post.img %}{{post.img}}{% else %}adena-trail-01.jpg{% endif %});background-position:center;background-repeat: no-repeat;"></div>
+    <div class="post-list--img" style="background:url(/trails/images/medium-large/{% if post.img %}{{post.img}}{% else %}adena-trail-01.jpg{% endif %});background-position:center;background-size:cover;"></div>
     <h3>{{post.title}}
       <br />
       <em>{{post.date | date: "%B %-d, %Y"}} by {{post.author}}</em>
@@ -48,7 +48,7 @@ css: >-
 {% endfor %}
 {% for post in site.posts limit:18 offset:2%}
 <div class="col-sm-6 col-md-4 post-list">
-  <div class="post-list--img" style="background:url(/trails/images/medium/{% if post.img %}{{post.img}}{% else %}adena-trail-01.jpg{% endif %});background-position:center;background-repeat: no-repeat;"></div>
+  <div class="post-list--img" style="background:url(/trails/images/medium/{% if post.img %}{{post.img}}{% else %}adena-trail-01.jpg{% endif %});background-position:center;background-size:cover;"></div>
   <h3>
     <a href="{{post.url}}">
       {{post.title}}
